<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

    <ListPreference
        android:defaultValue="@string/settings_Language_default"
        android:entries="@array/settings_Language_labels"
        android:entryValues="@array/settings_Language_values"
        android:key="@string/settings_Language_key"
        android:title="@string/settings_Language_label" />

    <ListPreference
        android:defaultValue="@string/settings_Country_default"
        android:entries="@array/settings_Country_labels"
        android:entryValues="@array/settings_Country_values"
        android:key="@string/settings_Country_key"
        android:title="@string/settings_Country_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_item_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_item_key"
        android:selectAllOnFocus="true"
        android:title="Number Of Items"
        />

</PreferenceScreen>